# WordsCounter

./: CMakeLists.txt  README.md
src/: MultiThreadedWordCounter.cpp  MultiThreadedWordCounter.hpp  Timer.hpp  definitions.hpp  main.cpp  multiProcessing.cpp  multiProcessing.hpp  sequentialProcessing.cpp  sequentialProcessing.hpp  words.txt
tests/: test_sequentialProcessing.cpp
